--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.no-ip.mikelue.jpa</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -21,12 +21,12 @@
         <version.hibernate>4.1.7.Final</version.hibernate>
         <version.hsqldb>2.2.4</version.hsqldb>
         <version.javax.inject>1</version.javax.inject>
-        <version.jmockit>0.999.18</version.jmockit>
+        <version.jmockit>1.1</version.jmockit>
         <version.liquibase>2.0.5</version.liquibase>
-        <version.logback>1.0.7</version.logback>
-        <version.slf4j>1.7.2</version.slf4j>
-        <version.springframework>3.1.2.RELEASE</version.springframework>
-        <version.testng>6.8</version.testng>
+        <version.logback>1.0.11</version.logback>
+        <version.slf4j>1.7.5</version.slf4j>
+        <version.springframework>3.1.4.RELEASE</version.springframework>
+        <version.testng>6.8.1</version.testng>
         <!-- :~) -->
 
         <!-- Links for Javadoc -->
@@ -164,16 +164,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
+                    <version>3.0</version>
                     <configuration>
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
+						<compilerArguments>
+							<bootclasspath>${JRE_HOME}\lib\rt.jar</bootclasspath>
+						</compilerArguments>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>2.14</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
