--- a/test/pom.xml
+++ b/test/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <optional>true</optional>
         </dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+            <optional>true</optional>
+		</dependency>
         <!-- :~) -->
 
         <!-- Testing -->
