--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.no-ip.mikelue.jpa</groupId>
         <artifactId>parent</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -51,10 +51,10 @@
             <artifactId>gentyref</artifactId>
 			<version>${version.googlecode.gentyref}</version>
         </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
         <!-- :~) -->
 
         <!-- Logging -->
