--- a/test/pom.xml
+++ b/test/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.no-ip.mikelue.jpa</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -77,10 +77,10 @@
             <artifactId>snakeyaml</artifactId>
             <version>${version.snakeyaml}</version>
         </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
         <!-- :~) -->
 
         <!-- Logging -->
