--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <version.cglib>2.2.2</version.cglib>
         <version.commons.lang3>3.1</version.commons.lang3>
         <version.hibernate>4.1.7.Final</version.hibernate>
-        <version.hsqldb>2.2.4</version.hsqldb>
+        <version.hsqldb>2.2.9</version.hsqldb>
         <version.java.validation>1.1.0.Final</version.java.validation>
         <version.javax.inject>1</version.javax.inject>
         <version.jmockit>1.1</version.jmockit>
@@ -108,7 +108,11 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>${version.slf4j}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>log4j-over-slf4j</artifactId>
+				<version>${version.slf4j}</version>
+			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
@@ -127,7 +131,7 @@
 			  -->
 			<dependency>
 				<groupId>org.hsqldb</groupId>
-				<artifactId>hsqldb-j5</artifactId>
+				<artifactId>hsqldb</artifactId>
 				<version>${version.hsqldb}</version>
 			</dependency>
 			<dependency>
