--- a/test/pom.xml
+++ b/test/pom.xml
@@ -115,11 +115,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb-j5</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
             <scope>test</scope>
@@ -130,6 +125,21 @@
             <scope>test</scope>
         </dependency>
         <!-- :~) -->
+
+        <!--
+          - Dependencies for HSQLDB
+          -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+            <scope>test</scope>
+		</dependency>
+		<!-- :~) -->
     </dependencies>
 
     <build>
