--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.no-ip.mikelue.jpa</groupId>
     <artifactId>parent</artifactId>
-	<version>1.0.9</version>
+	<version>1.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -200,6 +200,7 @@
 					<executions>
 						<execution>
 							<id>attach-sources</id>
+							<phase>install</phase>
 							<goals>
 								<goal>jar</goal>
 							</goals>
@@ -213,6 +214,7 @@
 					<executions>
 						<execution>
 							<id>attach-javadocs</id>
+							<phase>install</phase>
 							<goals>
 								<goal>jar</goal>
 							</goals>
