--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,20 +9,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.no-ip.mikelue.jpa</groupId>
+		<groupId>guru.mikelue.jpa</groupId>
         <artifactId>parent</artifactId>
-		<version>1.1.0</version>
+		<version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>core</artifactId>
     <name>JPA core enhanced library</name>
-	<version>1.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
         <!-- Version definitions -->
-        <version.googlecode.gentyref>1.1.0</version.googlecode.gentyref>
+        <version.googlecode.gentyref>1.2.0</version.googlecode.gentyref>
         <!-- :~) -->
 
         <!-- Test environment for database -->
@@ -66,14 +65,14 @@
         <!-- :~) -->
 
         <!-- Spring Frameworks(Optional) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+            <optional>true</optional>
+		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -152,6 +151,14 @@
         </testResources>
 
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
