--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.no-ip.mikelue.jpa</groupId>
+    <groupId>guru.mikelue.jpa</groupId>
     <artifactId>parent</artifactId>
-	<version>1.1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -14,37 +14,44 @@
     </modules>
 
     <properties>
-		<version.project>${project.version}</version.project>
-
         <!-- Versions could be used from sub modules -->
-        <version.cglib>2.2</version.cglib>
-        <version.commons.lang3>3.1</version.commons.lang3>
-        <version.hibernate>4.2.2.Final</version.hibernate>
-        <version.hsqldb>2.2.9</version.hsqldb>
+        <version.cglib>3.1</version.cglib>
+        <version.commons.lang3>3.4</version.commons.lang3>
+        <version.hibernate>5.0.2.Final</version.hibernate>
+        <version.hibernate.validation>5.2.2.Final</version.hibernate.validation>
+        <version.hsqldb>2.3.3</version.hsqldb>
         <version.java.validation>1.1.0.Final</version.java.validation>
         <version.javax.inject>1</version.javax.inject>
-        <version.jmockit>1.3</version.jmockit>
+        <version.jmockit>1.7</version.jmockit>
         <version.liquibase>2.0.5</version.liquibase>
-        <version.logback>1.0.13</version.logback>
-        <version.slf4j>1.7.5</version.slf4j>
-        <version.springframework>3.1.4.RELEASE</version.springframework>
-        <version.testng>6.8.5</version.testng>
+        <version.logback>1.1.3</version.logback>
+        <version.slf4j>1.7.12</version.slf4j>
+        <version.springframework>4.2.1.RELEASE</version.springframework>
+        <version.testng>6.9.8</version.testng>
+        <version.javax.el>3.0.1-b04</version.javax.el>
+        <version.javax.el.glassfish>2.2.6</version.javax.el.glassfish>
         <!-- :~) -->
 
-        <!-- Links for Javadoc -->
-        <javadoc.link.java6>http://download.oracle.com/javase/6/docs/api/</javadoc.link.java6>
-        <javadoc.link.javaee6>http://download.oracle.com/javaee/6/api/</javadoc.link.javaee6>
-        <javadoc.link.slf4j>http://www.slf4j.org/apidocs/</javadoc.link.slf4j>
-        <javadoc.link.springframework>http://static.springsource.org/spring/docs/3.1.x/javadoc-api/</javadoc.link.springframework>
-        <!-- :~) -->
-
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     </properties>
+
+	<scm>
+		<url>https://github.com/mikelue/jpa-enhance.git</url>
+		<connection>scm:git:git@github.com:mikelue/jpa-enhance.git</connection>
+		<developerConnection>scm:git:git@github.com:mikelue/jpa-enhance.git</developerConnection>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>deployment-mikelue</id>
+			<name>MikeLue Repository</name>
+			<url>http://mikelue.no-ip.org:8055/nexus/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
@@ -69,19 +76,18 @@
 
 			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring-orm</artifactId>
+				<artifactId>spring-context</artifactId>
 				<version>${version.springframework}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${version.slf4j}</version>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${version.springframework}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${version.springframework}</version>
 			</dependency>
 			<dependency>
 				<groupId>cglib</groupId>
@@ -120,11 +126,30 @@
 			</dependency>
 			<!-- :~) -->
 
+			<!--
+			  - Validation
+			  -->
 			<dependency>
 				<groupId>javax.validation</groupId>
 				<artifactId>validation-api</artifactId>
 				<version>${version.java.validation}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${version.hibernate.validation}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.el</groupId>
+				<artifactId>javax.el-api</artifactId>
+				<version>${version.javax.el}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.web</groupId>
+				<artifactId>javax.el</artifactId>
+				<version>${version.javax.el.glassfish}</version>
+			</dependency>
+			<!-- :~) -->
 
 			<!--
 			  - Dependencies for testing
@@ -160,63 +185,67 @@
 	</dependencyManagement>
 
     <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+		</plugins>
+
         <pluginManagement>
             <plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.6</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.3</version>
                     <configuration>
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
-						<compilerArguments>
-							<bootclasspath>${JAVA_HOME}\jre\lib\rt.jar</bootclasspath>
-							<Xlint/>
-						</compilerArguments>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.14.1</version>
+                    <version>2.18.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9</version>
+                    <version>2.10.3</version>
                     <configuration>
-                        <links>
-                            <link>${javadoc.link.java6}</link>
-                            <link>${javadoc.link.javaee6}</link>
-                            <link>${javadoc.link.slf4j}</link>
-                            <link>${javadoc.link.springframework}</link>
-                        </links>
                     </configuration>
-                </plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-source-plugin</artifactId>
-					<version>2.2.1</version>
 					<executions>
 						<execution>
-							<id>attach-sources</id>
-							<phase>install</phase>
+							<id>attach-javadocs</id>
 							<goals>
 								<goal>jar</goal>
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
+                </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9.1</version>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.4</version>
 					<executions>
 						<execution>
-							<id>attach-javadocs</id>
-							<phase>install</phase>
+							<id>attach-sources</id>
 							<goals>
-								<goal>jar</goal>
+								<goal>jar-no-fork</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -224,29 +253,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
-	<scm>
-		<connection>scm:git:git@github.com:mikelue/jpa-enhance.git</connection>
-		<developerConnection>scm:git:git@github.com:mikelue/jpa-enhance.git</developerConnection>
-		<url>https://github.com/mikelue/jpa-enhance.git</url>
-	</scm>
-
-	<repositories>
-		<repository>
-			<id>mirror-mikelue</id>
-			<name>Mike Lue's Mirror</name>
-			<url>http://mikelue.no-ip.org:8055/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<id>deployment-mikelue</id>
-			<name>MikeLue Repository</name>
-			<url>http://mikelue.no-ip.org:8055/nexus/content/repositories/releases/</url>
-		</repository>
-	</distributionManagement>
 </project>
