--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
                     <configuration>
+						<compilerArgs>
+							<arg>-Werror</arg>
+							<!--<arg>-Xlint</arg>-->
+						</compilerArgs>
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
                     </configuration>
